=======================
	* split up script configuration in two files (anwering machine, fax),
	  some new features configurable now (e.g. actions)

0.3.1 (tag CAPISUITE_031):
==========================
	* dist: included spec and init file in CVS and dist
	* scripts: use different sendqueues for each user 
	* core: fixed some bugs: 
		- capisuite.error() didn't work, 
		- logging in outgoing connections didn't work 
		- callingParty wasn't set correctly
	* scripts: answering machine switches to fax when incoming service indicator says fax
	* scripts: sayNumber can now handle all number from 0 to 99, so all dates and times are 
	  now said nearly correctly for the remote inquiry
	* scripts: fixed a typo in incoming.py
	* docs: added ISDN/CAPI error codes to manual 

0.3.2 (tag CAPISUITE_032):
==========================
	* core: finally got rid of the CommonC++ library:
		- threading implemented using native pthread_* calls
		- rewritten CapiSuite::parseConfigFile() to use STL string routines
		- changed Connection class to use pthread_mutex_*
	* scripts: fixed bug which lead to hanging processes of externally started 
	           progs like sendmail
	* scripts: minor fixes 
		
0.4 (tag CAPISUITE_04):
=======================
	* added cron script for cleaning up spool dirs
	* fixed bug in rc.capisuite (was also started when not configured)
	* scripts: remote inquiry supports new and old messages now
	* scripts: capisuitefax can show sendqueue and delete jobs now

0.4.1 (tag NN):
===============
	* cron script: redirect error output to /dev/null
	* scripts: fixed a bug in incoming.py that lead to idle.py
	  doing nothing after a while and so no faxes were sent any more
          (bug #527)
	* core: cosmetical code improvements to make old gcc-2.95 more happy
	* scripts: fixed remote inquiry: mixed new and old messages sometimes
	* core: fixed quite some problems when doing "make install" to an arbitrary
	  prefix, thanks to Achim Bohnet for pointing me to these	