@@ -111,4 +111,6 @@
 	* core: cosmetical code improvements to make old gcc-2.95 more happy
 	* scripts: fixed remote inquiry: mixed new and old messages sometimes
 	* core: fixed quite some problems when doing "make install" to an arbitrary
-	  prefix, thanks to Achim Bohnet for pointing me to these	
+	  prefix, thanks to Achim Bohnet for pointing me to these
+	* scripts: stricter permissions of received files and dirs, thx to Achim Bohnet
+	  this fixes bug #544	
